name:                tigress
version:             0.1.0.0
synopsis:            A subset of Tiger
description:         A tiny interpreter/compiler for Tigress, a subset of Tiger language.
homepage:            https://github.com/koba-e964/tigress.git
license:             BSD3
license-file:        LICENSE
author:              koba-e964
maintainer:          silentkiddie-2014@yahoo.co.jp
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable tigress
  main-is:             Main.hs
  other-modules:       TigressLexer, TigressParser
  other-extensions:    BangPatterns
  build-depends:       base >=4 && <5, array >=0.4
  hs-source-dirs:      src/
  build-tools:         alex, happy
  default-language:    Haskell2010

