name:                tigress
version:             0.1.0.0
synopsis:            A subset of Tiger
description:         A tiny interpreter/compiler for Tigress, a subset of Tiger language.
homepage:            https://github.com/koba-e964/tigress.git
license:             BSD3
license-file:        LICENSE
author:              koba-e964
maintainer:          silentkiddie-2014@yahoo.co.jp
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable tigress
  main-is:             Main.hs
  other-modules:       TigressLexer, TigressParser
  other-extensions:    BangPatterns
  build-depends:       base >=4 && <5, array >=0.4, mtl >=2.2, containers >=0.5, primitive >=0.5
  hs-source-dirs:      src/
  build-tools:         alex, happy
  default-language:    Haskell2010

Test-Suite test-parser
    type:       exitcode-stdio-1.0
    main-is:    ParserTest.hs
    other-modules:       TigressLexer, TigressParser
    build-depends:       base >=4 && <5, array >=0.4, mtl >=2.2, containers >=0.5, primitive >=0.5, test-framework >=0.8, HUnit >= 1.2, test-framework-hunit >=0.3
    hs-source-dirs:      src/, test/

Test-Suite test-eval
    type:       exitcode-stdio-1.0
    main-is:    EvalTest.hs
    other-modules:       TigressLexer, TigressParser
    build-depends:       base >=4 && <5, array >=0.4, mtl >=2.2, containers >=0.5, primitive >=0.5, test-framework >=0.8, HUnit >= 1.2, test-framework-hunit >=0.3
    hs-source-dirs:      src/, test/

